# thermosolver

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  job.sh  plotter.py  profiler.sh
data/: cn_perf.csv  conv_data.csv  diag_data.csv  diag_perf.csv  ftcs_perf.csv  res_data.csv  solve_data.csv  solve_perf.csv
output/: hip.259724.txt  hip.259730.txt  hip.259738.txt  hip.259739.txt  hip.259747.txt  hip.259748.txt  hip.260202.txt  hip.260203.txt  hip.260377.txt  hip.260378.txt  hip.260384.txt  hip.260385.txt  hip.cn.100.1000.txt  hip.cn.200.1000.txt  hip.ftcs.100.1000.txt  hip.ftcs.200.1000.txt  omp.100.txt  omp.200.txt  omp.259441.txt  omp.259442.txt  omp.259443.txt  omp.259575.txt  omp.259576.txt  omp.259745.txt  omp.259746.txt  omp.260207.txt  omp.260208.txt  omp.cn.100.1000.txt  omp.cn.200.1000.txt  omp.ftcs.100.1000.txt  omp.ftcs.200.1000.txt  serial.100.txt  serial.cn.100.1000.txt  serial.cn.200.1000.txt  serial.ftcs.100.1000.txt  serial.ftcs.200.1000.txt
profile/: hip.cn.100.1000_results.pftrace  hip.cn.200.1000_results.pftrace  hip.ftcs.100.1000_results.pftrace  hip.ftcs.200.1000_results.pftrace
src/: main.cpp
src/gpu/: gpu_func.cpp  gpu_func.h
src/solver/: equation.h  grid.cpp  grid.h  solver.cpp  solver.h
src/utils/: method.h  stats.h  timer.h  utils.cpp  utils.h
